[project]
name = "twitter-influencer"
version = "0.1.0"
description = "AI News Scraper with Twitter/X content aggregation and vector similarity search"
requires-python = ">=3.12"
dependencies = [
    "undetected-chromedriver>=3.5.0",
    "python-dotenv>=0.19.0",
    "setuptools>=65.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.33",
]

[tool.uv]
package = false